--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,32 +10,20 @@
 </head>
 
 <body>
-    <div class="flex-column justify-space-around">
-        <header class="display-flex justify-space-between align-center p-2">
-            <h1>The Tech Blog</h1>
-            <nav>
-                <!-- Conditionally render login or logout links -->
-                {{#if logged_in}}
-                <a href="/profile">profile</a> |
-                <button class="no-button" id="logout">logout</button>
-                {{else}}
-                <a href="/login">login</a>
-                {{/if}}
-            </nav>
+        <header>
+                <nav>
+                    <li>Home</li>>
+                    <li>Dashboard</li>>
+                    <li>Login</li>>
+                    <li>Logout</li>>
+                </nav>
+                <h1><span>The Tech Blog</span></h1>
         </header>
-        <main class="container container-fluid mt-5">
-            <!-- Render the sub layout -->
+        <main>
             {{{ body }}}
         </main>
-        <footer>
-
-        </footer>
-    </div>
-
-    <!-- Render script for logged in users only -->
-    {{#if logged_in}}
     <script src="/js/logout.js"></script>
-    {{/if}}
+  
 </body>
 
 </html>
