--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
         {{post.title}} {{post.date_created}}
     </div>
     <div class="main">
-        {{post.description}}
+        {{post.content}}
     </div>
 </div>
 {{/each}}
