--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,10 +12,10 @@
 <body>
         <header>
                 <nav>
-                    <li>Home</li>>
-                    <li>Dashboard</li>>
-                    <li>Login</li>>
-                    <li>Logout</li>>
+                    <a href="/"><li>Home</li></a>
+                    <a href="/dashboard"><li>Dashboard</li></a>
+                    <a href="/login"><li>Login</li></a>
+                    <button class="no-button" id="logout">logout</button>
                 </nav>
                 <h1><span>The Tech Blog</span></h1>
         </header>
