working on posts

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -9,6 +9,7 @@
             <input type="text" id="title-input"><br>
             <label for="Body-label">Body:</label><br>
             <textarea id="body-text"></textarea>
+            <input type="submit"></input>
         </form>
     </div>
 </div>
