working on public js files

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,8 +4,8 @@
     </div>
     <div class="main">
         <form class="login-form">
-            <label for="username-label">Username:</label><br>
-            <input type="text" id="username-login"><br>
+            <label for="Email-label">Email:</label><br>
+            <input type="text" id="Email-login"><br>
             <label for="password-label">Password:</label><br>
             <input type="text" id="password-login">
             <input type="submit" value="Login"></input>
