--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -8,8 +8,10 @@
             <label for="title-label">Title:</label><br>
             <input type="text" id="title-input"><br>
             <label for="Body-label">Body:</label><br>
-            <textarea id="body-text"></textarea>
+            <textarea id="body-input"></textarea>
             <input type="submit"></input>
         </form>
     </div>
 </div>
+
+<script src="../public/js/newPost.js"></script>
