--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,8 +14,8 @@
                 <nav>
                     <a href="/"><li>Home</li></a>
                     <a href="/dashboard"><li>Dashboard</li></a>
+                    <a href="/login/logout"><li>Log out</li></a>
                     <a href="/login"><li>Login</li></a>
-                    <button class="no-button" id="logout">logout</button>
                 </nav>
                 <h1><span>The Tech Blog</span></h1>
         </header>
