--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
         <h2>Log in.</h2>
     </div>
     <div class="main">
-        <form class="login-form">
+        <form class=" formlogin-form">
             <label for="Email-label">Email:</label><br>
             <input type="text" id="Email-login"><br>
             <label for="password-label">Password:</label><br>
@@ -14,10 +14,10 @@
 </div>
 <div class="signup">
     <div class="header">
-       <h1>Sign up.</h1> 
+        <h1>Sign up.</h1>
     </div>
 
-    <form class="signup-form">
+    <form class="form signup-form">
         <label for="username-label">Username:</label><br>
         <input type="text" id="username-signup"><br>
         <label for="email-label">Email:</label><br>
@@ -27,4 +27,4 @@
         <input type="submit" value="Sign Up"></input>
     </form>
 </div>
-<script src='../public/js/login.js'></script>
+<script src='/public/js/login.js'></script>
