--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,12 @@
 {{#each posts as |post| }}
 <div class="card">
     <div class="header">
-        <h1>{{post.title}}</h1> 
+        <h1>{{post.title}}</h1>
         <p>{{format_date post.date_created}}</p>
+        <p>{{user.username}}
     </div>
     <div class="main">
-       <p>{{post.content}}</p>
+        <p>{{post.content}}</p>
     </div>
 </div>
 {{/each}}
