got posts to render on homepage still having problems logging in

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
         <h2>Log in.</h2>
     </div>
     <div class="main">
-        <form class=" formlogin-form">
+        <form class="login-form">
             <label for="Email-label">Email:</label><br>
             <input type="text" id="Email-login"><br>
             <label for="password-label">Password:</label><br>
@@ -17,7 +17,7 @@
         <h1>Sign up.</h1>
     </div>
 
-    <form class="form signup-form">
+    <form class="signup-form">
         <label for="username-label">Username:</label><br>
         <input type="text" id="username-signup"><br>
         <label for="email-label">Email:</label><br>
