added all routes and handlebars for pages

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,6 +5,6 @@
     </div>
     
     <div class="main">
-        <a href="/newPost"><button id="create">Create Post</button></a>
+        <a href="/api/post/newPost"><button id="create">Create Post</button></a>
     </div>
 </div>
