--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -7,4 +7,8 @@
     <div class="main">
         <p>{{post.content}}</p>
     </div>
+
+    <div class="comment">
+        <a href="/api/comment/newComment"><button id="comment">Add a comment</button></a>
+    </div>
 </div>
