--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,17 +1,13 @@
-<div class="newpost">
-    <div class="header">
-        <h1>Create a post.</h1>
-    </div>
+<div class="card">
+        <h2>Create a post.</h2>
 
-    <div class="main">
-        <form class="newpost-form">
-            <label for="title-label">Title:</label><br>
-            <input type="text" id="title-input"><br>
-            <label for="Body-label">Body:</label><br>
-            <textarea id="body-input"></textarea>
+        <form>
+            <label for="title-label">Title:</label>
+            <input type="text" class="input"><br>
+            <label for="body-label">Body:</label>
+            <textarea></textarea><br>
             <input type="submit"></input>
         </form>
-    </div>
 </div>
 
 <script src="/js/newPost.js"></script>
