--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,51 +1,90 @@
 :root {
-    background: #D9EAD3;
-    --brown: #231010;
-    --mint: #D9EAD3;
+  background: #d9ead3;
+  --brown: #231010;
+  --mint: #d9ead3;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-    width: 100%;
-    height: 20%;
-    background-color: var(--brown);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
+  width: 100%;
+  height: 20%;
+  background-color: var(--brown);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 nav {
-    list-style-type: none;
-    color: var(--brown);
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-left: 4%;
+  margin-left: 4rem;
 }
 
 li {
-    color: var(--mint);
+  display: inline;
+  margin: 0 0.5rem;
+  color: var(--mint);
 }
 
 a {
-    text-decoration: inherit;
-    color: var(--mint);
+  text-decoration: inherit;
+  color: var(--mint);
+}
+
+main {
+  padding: 0 2rem;
 }
 
 h1 {
-    text-align: Left;
-    background-color: var(--mint);
-    border-radius: 2%;
-    padding: 0;
-    margin-left: 4%;
+  text-align: left;
+  background-color: white;
+  border-radius: 2%;
+  padding: 0;
+  margin-left: 4%;
 }
 
 h1 span {
-    background-color: var(--mint);
+  background-color: var(--mint);
+}
+
+h2 {
+  font-size: 2rem;
+  margin: 0.5rem 0;
+  padding: 0;
+}
+
+form {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.card {
+  background-color: white;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 1rem;
+}
+
+.label {
+  text-align: left;
+}
+
+input[type="text"] {
+  width: 100%;
+}
+
+textarea {
+  width: 100%;
+}
+
+input[type="submit"] {
+  width: 50%;
+  margin: 0 auto;
 }
