--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,9 @@
-{{#each posts as |post| }}
-<div class="card">
-    <div class="header">
-        <h1>{{post.title}}</h1>
-        <p>{{format_date post.date_created}}</p>
-        <p>{{user.username}}
-    </div>
-
-        <div class="main">
-            <p>{{post.content}}</p>
-        </div>
+{{#each posts as |post|}}
+  <div class="card">
+    <h2>{{post.title}}</h2>
+    <p>{{format_date post.date_created}}</p>
+    <p>{{user.username}}</p>
+    <p>{{post.content}}</p>
     <a href="/post/{{this.id}}"><button>Go to post</button></a>
-</div>
+  </div>
 {{/each}}
