--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,14 +1,10 @@
-<div class="post">
-    <div class="header">
-        <h2>{{post.title}}</h2>
-        <p>{{post.date_created}}</p>
-    </div>
+<div class="card">
+  <h2>{{post.title}}</h2>
+  <p>{{format_date post.date_created}}</p>
 
-    <div class="main">
-        <p>{{post.content}}</p>
-    </div>
+  <p>{{post.content}}</p>
 
-    <div class="comment">
-        <a href="/api/comment/newComment"><button id="comment">Add a comment</button></a>
-    </div>
+  <div class="comment">
+    <a href="/api/comment/newComment"><button id="comment">Add a comment</button></a>
+  </div>
 </div>
