--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,10 +1,10 @@
 <div class="card">
-    <div class="header">
-        <h2>DashBoard.</h2>
-        <p>Create a post, down below.</p>
-    </div>
-    
-    <div class="main">
-        <a href="/api/post/newPost"><button id="create">Create Post</button></a>
-    </div>
+  <div class="header">
+    <h2>Dashboard.</h2>
+    <p>Create a post, down below.</p>
+  </div>
+
+  <div class="main">
+    <a href="/api/post/newPost"><button id="create">Create Post</button></a>
+  </div>
 </div>
