--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,28 +1,28 @@
-<!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Tech Blog</title>
-    <link rel="stylesheet" href="/css/jass.css">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
 
-<body>
-        <header>
-                <nav>
-                    <a href="/"><li>Home</li></a>
-                    <a href="/dashboard"><li>Dashboard</li></a>
-                    <a href="/login/logout"><li>Log out</li></a>
-                    <a href="/login"><li>Login</li></a>
-                </nav>
-                <h1><span>The Tech Blog</span></h1>
-        </header>
-        <main>
-            {{{ body }}}
-        </main>
-</body>
+  <body>
+    <header>
+      <div id="titlenav">
+        <nav>
+          <a href="/"><li>Home</li></a>
+          <a href="/dashboard"><li>Dashboard</li></a>
+          <a href="/login/logout" id="logout"><li>Log out</li></a>
+          <a href="/login"><li>Login</li></a>
+        </nav>
+        <h1><span>The Tech Blog</span></h1>
+      </div>
+    </header>
+    <main>
+      {{{body}}}
+    </main>
+  </body>
 </html>
 
 <script src="/js/logout.js"></script>
