--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
         <nav>
           <a href="/"><li>Home</li></a>
           <a href="/dashboard"><li>Dashboard</li></a>
-          <a href="/login/logout"><li>Log out</li></a>
+          <a href="/login/logout" id="logout"><li>Log out</li></a>
           <a href="/login"><li>Login</li></a>
         </nav>
         <h1><span>The Tech Blog</span></h1>
