--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -3,9 +3,9 @@
 
         <form>
             <label for="title-label">Title:</label>
-            <input type="text" class="input"><br>
+            <input type="text" class="input" id="title-input"><br>
             <label for="body-label">Body:</label>
-            <textarea></textarea><br>
+            <textarea id="body-input"></textarea><br>
             <input type="submit"></input>
         </form>
 </div>
