signin functionality work

--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,11 +1,11 @@
 <div class="card">
         <h2>Create a comment.</h2>
 
-        <form>
+        <form id="comment-form">
             <label for="title-label">Title:</label>
-            <input type="text" class="input"><br>
+            <input type="text" class="input" id="title-input"><br>
             <label for="body-label">Body:</label>
-            <textarea></textarea><br>
+            <textarea id="body-input"></textarea><br>
             <input type="submit"></input>
         </form>
 </div>
