--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,13 +1,12 @@
 <div class="card">
         <h2>Create a post.</h2>
-
-        <form>
+        <form id="post-form">
             <label for="title-label">Title:</label>
             <input type="text" class="input" id="title-input"><br>
             <label for="body-label">Body:</label>
-            <textarea id="body-input"></textarea><br>
+            <textarea id="post-body"></textarea><br>
             <input type="submit"></input>
         </form>
-</div>
+</div>  
 
 <script src="/js/newPost.js"></script>
