--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,7 +3,9 @@
   <p>{{format_date post.date_created}}</p>
 
   <p>{{post.content}}</p>
+  <hr />
 
+  <h3>Comments</h3>
   <div class="comment">
     <a href="/api/comment/newComment"><button id="comment">Add a comment</button></a>
   </div>
