--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -2,10 +2,7 @@
         <h2>Create a comment.</h2>
 
         <form id="comment-form">
-            <label for="title-label">Title:</label>
-            <input type="text" class="input" id="title-input"><br>
-            <label for="body-label">Body:</label>
-            <textarea id="body-input"></textarea><br>
+            <textarea id="comment-input"></textarea><br>
             <input type="submit"></input>
         </form>
 </div>
